# StudCamp-Yandex-HSE

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Info.py  README.md  cc.ru.300.bin.dvc  pyproject.toml  streamlit_app.py  weights.dvc
.dvc/: config
.github/workflows/: CI.yml  demo.yml
notebooks/: clusterization_model.ipynb
pages/: Inference.py
studcamp_yandex_hse/models/: __init__.py
studcamp_yandex_hse/models/clusterizer_based_model/: clusterizer.py
