[tool.poetry]
name = "studcamp-yandex-hse"
version = "0.1.0"
description = "Text-tagging project within Yandex x HSE StudCamp event"
authors = ["deniskazhekin <deniskazhekin@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "studcamp_yandex_hse"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
